--- a/README
+++ b/README
@@ -1,1 +1,8 @@
 A set of cucumber tests (utilizing aruba) that test the generator functionality of geddy
+
+Just run...
+
+	git clone git://github.com/cookrn/geddy-gen_tests.git
+	cd geddy-gen_tests
+	bundle test
+	cucumber
